changed my home.html to index.html

--- a/about.html
+++ b/about.html
@@ -13,7 +13,7 @@
       <nav class="*">
         <ul>
           <li>
-            <a href="home.html">
+            <a href="index.html">
               <img src="image/logo.png" alt="" id="logo" />
             </a>
           </li>
@@ -25,7 +25,7 @@
             <a id="navBar" href="about.html">About</a>
           </li>
           <li class="float-right">
-            <a id="navBar" href="home.html">Home</a>
+            <a id="navBar" href="index.html">Home</a>
           </li>
 
           
